Fix overlapping friend content

--- a/client/src/components/pages/Stats.css
+++ b/client/src/components/pages/Stats.css
@@ -6,7 +6,7 @@
 .flex-column {
     display: flex;
     flex-direction: column;
-    /* width: 50%; */
+    width: 50%;
 }
 
 .Stats-left {
